--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <version>2.0.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-web-search-engine-tavily</artifactId>
+            <version>1.8.0-beta15</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
